Front end bugfixes and tweaks: Sort events by date, animate more info, fix logo sizes, fix header, sponsors and services on mobile, html page title.

--- a/app/assets/stylesheets/app.css.sass
+++ b/app/assets/stylesheets/app.css.sass
@@ -125,7 +125,7 @@ header
   // background: $darkgray
   height: 440px
   @media (max-width: 720px)
-    height: 300px
+    height: auto
 
   h1
     +scale(6)
@@ -135,8 +135,8 @@ header
     background:
       image: url(/img/popupdom.png)
       repeat: no-repeat
-      position: bottom right
-      size: 100%
+      position: center left
+      size: 50%
     margin:
       top: 1em
     @media (max-width: 720px)
@@ -148,7 +148,7 @@ header
     .logo
       text-indent: -9999px
   h2
-    margin-top: 13em
+    margin-top: 12em
     @media (max-width: 720px)
       margin-top: 1em
   h2, h3
@@ -159,6 +159,9 @@ header
     .three-dee
       margin:
         right: 2em
+  h3
+    @media (max-width: 720px)
+      padding-bottom: 1em
 
 .whatis
   p
@@ -230,6 +233,21 @@ header
     clear: both
   a
     +bold
+
+.services
+  .startup-dom
+    +col(8, screen, huge)
+    +col(12, handheld, tablet)
+  
+  .coworking
+    +col(4, screen, huge)
+    +col(6, tablet)
+    +col(12, handheld)
+  
+  .coffee
+    +col(4, screen, huge)
+    +col(6, tablet)
+    +col(12, handheld)
 
 .events, .products
   .description
@@ -304,108 +322,6 @@ header
       height: 300px
     .image-2
       height: 400px
-.footer
-  background-color: $darkgray
-  text-align: center
-  border-top: 2px solid black
-  +scale(1)
-
-
-
-
-header
-  // background: url(/img/oblak.jpg) center center no-repeat
-  height: 440px
-  @media (max-width: 720px)
-    height: 300px
-
-  h1
-    +scale(6)
-    +col(6, tablet, screen, huge)
-    +col(12, handheld)
-    +height(4)
-    background:
-      image: url(/img/popupdom.png)
-      repeat: no-repeat
-      position: bottom right
-      size: 100%
-    margin:
-      top: 1em
-    @media (max-width: 720px)
-      height: 130px
-      background:
-        position: center center
-        size: 50%
- 
-    .logo
-      text-indent: -9999px
-  h2
-    margin-top: 13em
-    @media (max-width: 720px)
-      margin-top: 1em
-  h2, h3
-    +col(6, tablet, screen, huge)
-    +col(12, handheld)
-    @extend .capital-headers
-    text-align: right
-    .three-dee
-      margin:
-        right: 2em
-
-.applications, .sponsorships
-  border-top: 2px solid $black
-
-.applications
-  background-color: $darkgray
-  color: $white
-  a
-    color: $white
-
-.sponsorships
-  background-color: $lightgray
-  color: $black
-  padding-bottom: 6em !important
-  clear: both
-  overflow: hidden
-  a
-    color: $black
-
-.applications, .sponsorships
-  padding-bottom: 2em
-  .heading
-    +row(12)
-    // margin-top: -28px
-  h2
-    // margin-top: -28px
-    @extend .capital-headers
-    +col(12)
-
-  p.question, .contact
-    padding-left: 1em
-       
-  p.question
-    +col(12)
-    margin-top: 2em
-  .contact
-    +row(12)
-    .email-address
-      +col(6, tablet, screen, huge)
-      +col(6, handheld)
-    .email-button
-      +col(4, tablet, screen, huge)
-      +col(6, handheld)
-      a
-        text-transform: uppercase
-        text-decoration: none
-        +bold
-        color: $black
-
-  .requirements
-    margin-top: 0
-    clear: both
-  a
-    +bold
-
 .footer
   background-color: $darkgray
   text-align: center
